--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,6 @@
 @import './base/settings';
 @import './base/base';
-@import '/components/button';
+@import './components/button';
+@import './components/widget';
 @import './components/container';
 @import './components/header';
