--- a/src/styles/components/_option.scss
+++ b/src/styles/components/_option.scss
@@ -10,4 +10,5 @@ border-bottom: 1px solid lighten($light-blue, 10%);
     font-weight: 500;
     font-size: 2rem;
     margin: 0;
+    word-break: break-all;
 }
