--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -16,3 +16,10 @@
     font-weight: 500;
     margin: 0;
 }
+
+
+@media (min-width: $destkop-breakpoint) {
+        .header {
+            margin-bottom: $xl-size;
+        }
+    }
