--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -5,7 +5,7 @@
     color: white;
     font-weight: bold;
     font-size: $l-size;
-    margin-bottom: $xl-size;
+    margin-bottom: $m-size;
     padding: 2.4rem;
     width: 100%;
 }
@@ -31,4 +31,11 @@
     border: none;
     color: $off-white;
     padding: 0;
+}
+
+
+@media (min-width: $destkop-breakpoint) {
+    .big-button {
+        margin-bottom: $xl-size;
+    }
 }
