--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -10,6 +10,10 @@
     margin: 0;
 }
 
+.header__links {
+    padding-right: 1em;
+}
+
 .header__subtitle {
     color: $off-white;
     font-size: $m-size;
