--- a/src/styles/components/_widget.scss
+++ b/src/styles/components/_widget.scss
@@ -13,6 +13,14 @@
     justify-content: space-between;
 }
 
+// Widget info
+.widget-info {
+    background: $blue;
+    color: $off-white;
+    padding: $m-size;
+    justify-content: space-between;
+}
+
 .widget-header__title {
     margin: 0;
 }
